issue1366 - show featured on mobile

--- a/app/assets/sass/dri/dri_layouts.scss
+++ b/app/assets/sass/dri/dri_layouts.scss
@@ -399,7 +399,7 @@
 }
     
   .dri_home_container, #dri_rss_feed_id {
-    display:none;
+    clear:both;
   }
   
  .dri_slideshow_block {
